Closed Bug 527289 Opened 16 years ago Closed 16 years ago

crash [@ nsHyperTextAccessible::ScrollSubstringToPoint(int, int, unsigned int, int, int)]

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: davidb, Assigned: davidb)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Attached patch An ideaSplinter Review
E.g. http://crash-stats.mozilla.com/report/index/adf41e22-4ce9-4974-8b9e-7c8752091106 nsSize size(parentFrame->GetSize()); PRInt16 hPercent = offsetPoint.x * 100 / size.width; PRInt16 vPercent = offsetPoint.y * 100 / size.height; EXCEPTION_INT_DIVIDE_BY_ZERO We should check our denominators against 0.
Attachment #411030 - Flags: review?(surkov.alexander)
Attachment #411030 - Flags: review?(marco.zehe)
Signature nsHyperTextAccessible::ScrollSubstringToPoint(int, int, unsigned int, int, int) UUID adf41e22-4ce9-4974-8b9e-7c8752091106 Time 2009-11-06 12:42:53.331460 Uptime 287 Last Crash 290 seconds before submission Product Firefox Version 3.6b1 Build ID 20091029171059 Branch 1.9.2 OS Windows NT OS Version 5.1.2600 Service Pack 3 CPU x86 CPU Info GenuineIntel family 15 model 2 stepping 9 Crash Reason EXCEPTION_INT_DIVIDE_BY_ZERO Crash Address 0x107913dd User Comments Every time i click on an aplication in facebook your browser crashes, don't know if this is an incompatability issue with facebook or if something else is the problem. Processor Notes Related Bugs Crashing Thread Frame Module Signature [Expand] Source 0 xul.dll nsHyperTextAccessible::ScrollSubstringToPoint accessible/src/html/nsHyperTextAccessible.cpp:2035 1 xul.dll nsLineLayout::ReflowFrame layout/generic/nsLineLayout.cpp:979 2 xul.dll nsBlockFrame::DoReflowInlineFrames layout/generic/nsBlockFrame.cpp:3573 3 xul.dll nsBlockFrame::ReflowInlineFrames layout/generic/nsBlockFrame.cpp:3423 4 xul.dll nsBlockFrame::ReflowLine layout/generic/nsBlockFrame.cpp:2463 5 xul.dll nsBlockFrame::ReflowDirtyLines layout/generic/nsBlockFrame.cpp:1921 6 xul.dll nsBlockFrame::Reflow layout/generic/nsBlockFrame.cpp:991 7 xul.dll nsBlockReflowContext::ReflowBlock layout/generic/nsBlockReflowContext.cpp:310 8 xul.dll nsBlockFrame::ReflowBlockFrame layout/generic/nsBlockFrame.cpp:3140 9 xul.dll nsBlockFrame::ReflowLine layout/generic/nsBlockFrame.cpp:2408 10 xul.dll nsBlockFrame::ReflowDirtyLines layout/generic/nsBlockFrame.cpp:1921 11 xul.dll nsBlockFrame::Reflow layout/generic/nsBlockFrame.cpp:991 12 xul.dll nsContainerFrame::ReflowChild layout/generic/nsContainerFrame.cpp:800 13 xul.dll CanvasFrame::Reflow layout/generic/nsHTMLFrame.cpp:548 14 xul.dll nsContainerFrame::ReflowChild layout/generic/nsContainerFrame.cpp:800 15 xul.dll nsHTMLScrollFrame::ReflowScrolledFrame layout/generic/nsGfxScrollFrame.cpp:545 16 xul.dll nsHTMLScrollFrame::ReflowContents layout/generic/nsGfxScrollFrame.cpp:639 17 xul.dll nsHTMLScrollFrame::Reflow layout/generic/nsGfxScrollFrame.cpp:840 18 xul.dll nsContainerFrame::ReflowChild layout/generic/nsContainerFrame.cpp:800 19 xul.dll ViewportFrame::Reflow layout/generic/nsViewportFrame.cpp:284
Severity: normal → critical
Keywords: accesscrash
Comment on attachment 411030 [details] [diff] [review] An idea r=me, thank you!
Attachment #411030 - Flags: review?(surkov.alexander) → review+
Attachment #411030 - Flags: review?(marco.zehe) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Crash Signature: [@ nsHyperTextAccessible::ScrollSubstringToPoint(int, int, unsigned int, int, int)]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: