Bug 527289 - crash [@ nsHyperTextAccessible::ScrollSubstringToPoint(int, int, unsigned int, int, int)]. r=surkov,MarcoZ